<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/restaurant_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/restaurant_image"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:scaleType="fitXY" />

        <RelativeLayout
            android:id="@+id/restaurant_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/restaurant_image"
            android:layout_toRightOf="@id/restaurant_image">

            <TextView
                android:id="@+id/restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_my_day_text"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/restaurant_address"
                android:layout_below="@id/restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/restaurant_container"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:background="@color/separator_dark" />

    <RelativeLayout
        android:id="@+id/restaurant_order_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/restaurant_container"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/restaurant_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/items_text" />

        <TextView
            android:id="@+id/item_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_items"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ordered_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_data"
            android:layout_marginTop="10dp"
            android:text="@string/ordered_on_text" />

        <TextView
            android:id="@+id/order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ordered_on"
            android:text="15 Dec 2020 3:53 PM"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_date"
            android:layout_marginTop="10dp"
            android:text="@string/total_amount_text" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/total"
            android:text="20.14"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/more_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="112dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/more_details"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/restaurant_order_details"

        android:layout_marginTop="8dp"

        android:background="@color/separator_light" />
</RelativeLayout>